Push ExercsiesOfSessions getPages, filtering, sorting And Fix Relating Logics