@@ -11,28 +11,62 @@ import org.springframework.stereotype.Repository;
 
 @Repository
 public interface ExercisesOfSessionsRepository extends JpaRepository<ExercisesOfSessions, Long> {
-//GROUP_CONCAT(moe.muscle, ',')
+    char GROUP_CONCAT_SEPARATOR = ',';
+
     boolean existsByExerciseExerciseId(Long id);
 
     /**
-     * NOTE: In production env, we'll never have an Exercise Entity without relating to Muscles.
-     * <br> So MusclesOfExercises always stores all Exercises (maybe larger as relationship).
-     * @param sessionId as virtual joining condition
-     * @param pageable as pagination condition
-     * @return List.of(ExercisesOfSessionResponse)
+     * Required-initialization: ExerciseHasMusclesResponse(new Exercise(), Collections.emptyList())
+     *
+     * @return Object[] {Exercise.exerciseId, Exercise.name, Exercise.basicReps, Exercise.level, muscleList}
      */
-    @Query("""
-        SELECT new com.restproject.backend.dtos.response.ExercisesOfSessionResponse(
-            moe.exercise,
-            "",
-            CASE WHEN eos.session.sessionId = :sessionId THEN true ELSE false END
-        )
-        FROM MusclesOfExercises moe
-        LEFT JOIN ExercisesOfSessions eos ON moe.exercise = eos.exercise
-        GROUP BY moe.exercise, eos.session.sessionId
-        ORDER BY moe.exercise.exerciseId, CASE WHEN eos.session.sessionId = :sessionId THEN 1 ELSE 2 END
-    """)
-    Page<ExercisesOfSessionResponse> findAllExercisesHasMusclesPrioritizeRelationshipBySessionId(
+    @Query(name = "findAllExercisesHasMusclesWithFilteringOfSession", nativeQuery = true, value = """
+        SELECT e.exercise_id, e.name, e.basic_reps, e.level_enum,
+        (eos.session_id IS NOT NULL AND eos.session_id = :sessionId) AS withSession,
+        GROUP_CONCAT(
+            DISTINCT moeft.muscle_enum
+            ORDER BY moeft.muscle_enum ASC
+            SEPARATOR '""" + GROUP_CONCAT_SEPARATOR + "')" + """
+        FROM (
+            SELECT moejid.exercise_id AS exercise_id, moejid.muscle_enum AS muscle_enum
+            FROM muscles_of_exercises moejid
+            WHERE :#{#filterObj.muscleList.isEmpty()} OR moejid.exercise_id IN (
+                SELECT DISTINCT m.exercise_id FROM muscles_of_exercises m
+                WHERE m.muscle_enum IN :#{#filterObj.muscleList}
+            )
+        ) AS moeft INNER JOIN exercise e ON e.exercise_id = moeft.exercise_id
+        LEFT OUTER JOIN exercises_of_sessions eos ON eos.exercise_id = e.exercise_id
+        WHERE  (:#{#filterObj.exerciseId} IS NULL  OR :#{#filterObj.exerciseId} = e.exercise_id)
+        AND (:#{#filterObj.level} IS NULL      OR :#{#filterObj.level} = e.level_enum)
+        AND (:#{#filterObj.basicReps} IS NULL  OR :#{#filterObj.basicReps} = e.basic_reps)
+        AND (:#{#filterObj.name} IS NULL       OR e.name LIKE CONCAT('%',:#{#filterObj.name},'%'))
+        GROUP BY e.exercise_id, withSession
+        ORDER BY withSession DESC
+        """)
+    Page<Object[]> findAllExercisesHasMusclesPrioritizeRelationshipBySessionId(
+        @Param("sessionId") Long sessionId,
+        @Param("filterObj") ExercisesOfSessionResponse exerciseInfo,
+        Pageable pageable
+    );
+
+    /**
+     * Required-initialization: ExerciseHasMusclesResponse(new Exercise(), Collections.emptyList())
+     *
+     * @return Object[] {Exercise.exerciseId, Exercise.name, Exercise.basicReps, Exercise.level, muscleList}
+     */
+    @Query(name = "findAllExercisesHasMusclesOfSession", nativeQuery = true, value = """
+        SELECT e.exercise_id, e.name, e.basic_reps, e.level_enum,
+        (eos.session_id IS NOT NULL AND eos.session_id = :sessionId) AS withSession,
+        GROUP_CONCAT(
+            DISTINCT moe.muscle_enum
+            ORDER BY moe.muscle_enum ASC
+            SEPARATOR '""" + GROUP_CONCAT_SEPARATOR + "')" + """
+        FROM muscles_of_exercises moe
+        INNER JOIN exercise e ON e.exercise_id = moe.exercise_id
+        LEFT OUTER JOIN exercises_of_sessions eos ON eos.exercise_id = e.exercise_id
+        GROUP BY e.exercise_id, withSession ORDER BY withSession DESC
+        """)
+    Page<Object[]> findAllExercisesHasMusclesPrioritizeRelationshipBySessionId(
         @Param("sessionId") Long sessionId,
         Pageable pageable
     );
